Commits changes made with Diogo to fix the main layout problem with margin on the right of the screen

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,10 +12,13 @@
 
 }
 
+.image-availabilities {
+  min-height: 200px;
+}
+
 .page-container {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
   width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
